--- a/HOA-server/src/main/resources/application.properties
+++ b/HOA-server/src/main/resources/application.properties
@@ -1,16 +1,35 @@
 spring.application.name=HOA-server
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/hoa
-spring.datasource.username=root
-spring.datasource.password=050326
+spring.profiles.active=dev
+spring.main.allow-circular-references=true
+
+spring.datasource.driver-class-name=${HOA.datasource.driver-class-name}
+spring.datasource.url=${HOA.datasource.url}
+spring.datasource.username=${HOA.datasource.username}
+spring.datasource.password=${HOA.datasource.password}
+
 mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 mybatis.mapper-locations=classpath*:mappers/*.xml
 mybatis.configuration.map-underscore-to-camel-case=true
+
 logging.level.root=info
 logging.level.org.springframework.jdbc.support.JdbcTransactionManager=debug
-
 logging.file.name=logs/app.log
 
 spring.servlet.multipart.max-file-size=10MB
 
-JWT_SECRET=mirtable233
+JWT_SECRET=${HOA.jwt.secret}
+
+mail.from.name=HOA-Music
+spring.mail.host=smtp.qq.com
+spring.mail.port=465
+spring.mail.username=${HOA.mail.username}
+spring.mail.password=${HOA.mail.password}
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.ssl.enable=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
+
+spring.data.redis.host=${HOA.redis.host}
+spring.data.redis.port=${HOA.redis.port}
+spring.data.redis.timeout=${HOA.redis.timeout}
