--- a/HOA-pojo/pom.xml
+++ b/HOA-pojo/pom.xml
@@ -23,6 +23,10 @@
             <version>3.5.19</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
