--- a/HOA-common/pom.xml
+++ b/HOA-common/pom.xml
@@ -72,5 +72,9 @@
             <version>2.0.3</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+        </dependency>
     </dependencies>
 </project>
