--- a/HOA-server/pom.xml
+++ b/HOA-server/pom.xml
@@ -102,6 +102,11 @@
             <artifactId>jaudiotagger</artifactId>
             <version>2.0.3</version>
         </dependency>
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper</artifactId>
+            <version>5.3.2</version>
+        </dependency>
 
     </dependencies>
 
