--- a/HOA-server/src/main/resources/application.properties
+++ b/HOA-server/src/main/resources/application.properties
@@ -18,6 +18,9 @@ logging.file.name=logs/app.log
 spring.servlet.multipart.max-file-size=10MB
 
 JWT_SECRET=${HOA.jwt.secret}
+jwt.user-secret-key=hoamusic
+jwt.user-ttl=7200000
+jwt.user-token-name=authentication
 
 mail.from.name=HOA-Music
 spring.mail.host=smtp.qq.com
@@ -33,3 +36,6 @@ spring.mail.properties.mail.smtp.writetimeout=5000
 spring.data.redis.host=${HOA.redis.host}
 spring.data.redis.port=${HOA.redis.port}
 spring.data.redis.timeout=${HOA.redis.timeout}
+
+wechat.appid=${HOA.wechat.appid}
+wechat.secret=${HOA.wechat.secret}
